fixed custom icons in 'compare items' window getting stretched

--- a/static/css/source/charts.scss
+++ b/static/css/source/charts.scss
@@ -254,22 +254,14 @@
         display: none;
     }
     
-    tbody,
-    thead,
-    tr,
-    td,
-    th {
+    tbody, thead, tr, td, th {
         height: 80px;
     }
     
     .part-container {
         position: relative;
-        background: #575757; border: solid white; border-width: 0 1px;
+        background: #575757;
         @include user-select(none);
-        
-        .dark-mode & {
-            border-color: black;
-        }
         
         &.hidden {
             display: none;
